logs/googleanalytics.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/addressable'...
Listing './lib/python3.5/site-packages/addressable-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/apiclient'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/google_api_python_client-1.4.2.dist-info'...
Listing './lib/python3.5/site-packages/googleanalytics'...
Listing './lib/python3.5/site-packages/googleanalytics/auth'...
Listing './lib/python3.5/site-packages/googleanalytics/commands'...
Listing './lib/python3.5/site-packages/googleanalytics/tests'...
Listing './lib/python3.5/site-packages/googleanalytics/utils'...
Listing './lib/python3.5/site-packages/googleanalytics-0.26.0.egg-info'...
Listing './lib/python3.5/site-packages/googleapiclient'...
Listing './lib/python3.5/site-packages/googleapiclient/discovery_cache'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/inspect_it-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/inspector'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/keyring'...
Listing './lib/python3.5/site-packages/keyring/backends'...
Listing './lib/python3.5/site-packages/keyring/tests'...
Listing './lib/python3.5/site-packages/keyring/tests/backends'...
Listing './lib/python3.5/site-packages/keyring/util'...
Listing './lib/python3.5/site-packages/keyring-5.3.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/num2words'...
Compiling './lib/python3.5/site-packages/num2words/lang_EN_EUR.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_EUR.py", line 43
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/num2words/lang_EN_GB_old.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_GB_old.py", line 43
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/num2words-0.5.6.dist-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Listing './lib/python3.5/site-packages/oauth2client-1.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pylev-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slugify'...
Listing './lib/python3.5/site-packages/snakify'...
Listing './lib/python3.5/site-packages/snakify-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/unicode_slugify-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
